# synapsemonitor

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  actions.html  index.html  monitor.html  monitor.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  teamRequestNotifier  updateActivityFeed.py
.github/workflows/: auto-doc.yml  ci.yml  codeql.yml  pythonapp.yml
scripts/: team_request_notifier.py  update_activity_feed.py
synapsemonitor/: __init__.py  __main__.py  actions.py  monitor.py  update_activity_feed.py
test/: test_monitor.py
