[metadata]
name = synapsemonitor
version = attr: synapsemonitor.__version__
description = Monitoring of Synapse Entity changes with the use of File Views.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sage-Bionetworks/synapsemonitor
author = Informatics & Biocomputing - Sage Bionetworks
author_email = infobiocomp@sagebionetworks.org
license = Apache
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/Sage-Bionetworks/synapsemonitor/issues
    Source Code = https://github.com/Sage-Bionetworks/synapsemonitor

[options]
packages = find:
install_requires =
    synapseclient>=2.5.1
    pandas>=1.0
python_requires = >=3.7, <3.10
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    synapsemonitor = synapsemonitor.__main__:main
